# QuietSwarm

./: .gitignore  LICENSE  README.md  pyproject.toml
QuietSwarm/Classes/: Attenuation.py  ElevationData.py  Parser.py  Pattern.py  Quaternion.py  Swarm.py  objectTypes.py
QuietSwarm/Helpers/: Projections.py  fetchElevationdata.py  iersRotMatrix.py  wgs84.py  writeConfiguration.py
QuietSwarm/Helpers_c/: julianDate.c  julianDate.h
QuietSwarm/Orbit_GPU_CPP/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
QuietSwarm/Projections/: eciToecef.c  paths.c  paths.h  projections.h  utils.c
QuietSwarm/Propagation/: Hamiltonian.c  Initialize.c  Integrator.c  Propagator.c  Utils.c  propagator.h  utils.h
testing/: parse_data.py  plot_tiff.py  query_test.py  test_pattern.py  test_propagation.py  test_propagation_temp.py  test_propagator_regression.py
testing/cache_directory/: COP30_59.305896_59.505896_18.072604_18.272604.tif
